dev/testdata/tracing/zipkin/2-tracing.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Tracing
metadata:
  name: tracing
spec:
  provider:
    name: envoy.tracers.zipkin
    typed_config:
      "@type": type.googleapis.com/envoy.config.trace.v3.ZipkinConfig
      collector_cluster: zipkin
      collector_endpoint: /api/v2/spans
      collector_endpoint_version: HTTP_JSON
