dev/testdata/tracing/zipkin/3-cluster.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: Cluster
metadata:
  name: zipkin
spec:
  name: zipkin
  connect_timeout: 1s
  type: STRICT_DNS
  lb_policy: ROUND_ROBIN
  load_assignment:
    cluster_name: zipkin
    endpoints:
      - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: zipkin.observability
                  port_value: 9411
