dev/testdata/tracing/zipkin/4-virtual-service.yaml
apiVersion: envoy.kaasops.io/v1alpha1
kind: VirtualService
metadata:
  name: vs
  annotations:
      envoy.kaasops.io/node-id: test
spec:
  listener:
    name: http
  tracingRef:
    name: tracing
  httpFilters:
    - name: envoy.filters.http.router
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  virtualHost:
    domains:
      - example.kaasops.io
    routes:
      - match:
          prefix: "/"
        direct_response:
          status: 200
          body:
            inline_string: "{\"message\":\"1111111111\"}"
